examples/csharp/errors/timeout/obj/project.nuget.cache
{
  "version": 2,
  "dgSpecHash": "hq2EMIlYLMxfM4cgBXiol6CC59LIMxAAC1tviSFf5+y+3jWnQJ2EtqktW+EYxlhEHuYquip52fv1XVPdGecmGQ==",
  "success": true,
  "projectFilePath": "/Users/liornabat/development/projects/kubemq/clients/kubemq-a2a/examples/csharp/errors/timeout/Timeout.csproj",
  "expectedPackageFiles": [],
  "logs": []
}